--- a/paper/paperexport.bib
+++ b/paper/paperexport.bib
@@ -50,6 +50,20 @@
     issn = {0004-637X}
 }
 
+@article{2021_scaling_paper,
+    title = {{Constraining the orbital eccentricity of inspiralling compact binary systems with Advanced LIGO}},
+    year = {2022},
+    journal = {Physical Review D},
+    author = {Favata, Marc and Kim, Chunglee and Arun, K. G. and Kim, Jeongcho and Lee, Hyung Won},
+    number = {2},
+    month = {1},
+    volume = {105},
+    publisher = {American Physical Society},
+    doi = {10.1103/PhysRevD.105.023003},
+    issn = {24700029},
+    arxivId = {2108.05861}
+}
+
 @article{mass_ecc_limit_2018,
     title = {{Eccentric Black Hole Gravitational-wave Capture Sources in Galactic Nuclei: Distribution of Binary Parameters}},
     year = {2018},
@@ -150,20 +164,6 @@
     volume = {851},
     doi = {10.3847/2041-8213/aa9bf6},
     issn = {2041-8213}
-}
-
-@article{Favata2022ConstrainingLIGO,
-    title = {{Constraining the orbital eccentricity of inspiralling compact binary systems with Advanced LIGO}},
-    year = {2022},
-    journal = {Physical Review D},
-    author = {Favata, Marc and Kim, Chunglee and Arun, K. G. and Kim, Jeongcho and Lee, Hyung Won},
-    number = {2},
-    month = {1},
-    volume = {105},
-    publisher = {American Physical Society},
-    doi = {10.1103/PhysRevD.105.023003},
-    issn = {24700029},
-    arxivId = {2108.05861}
 }
 
 @article{Lower2018MeasuringWaves,
