Updates from Overleaf

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -328,8 +328,9 @@ M^{ecc} = \frac{M}{(1-\frac{157}{24}\epsilon^2)^{3/5}}
 \end{align}
 
 
-\subsubsection{EBBH and NEBBH Population with $0\leq \sigma_e \leq 0.5$}
- The first population has the Gaussian distribution bounded between $0\leq \sigma_e \leq 0.5$ given in Fig. \ref{fig:pop3d05}.  
+\subsubsection{Population for $\sigma_\epsilon = 0.05$ }
+The first population is given in 
+  given in Fig. \ref{fig:pop3d05}.  
 
 \begin{figure}[H]
 \includegraphics[width=0.45\textwidth]{paper/figures/pop3d05.png}
