--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -310,97 +310,118 @@ p(m_1,m_2,\epsilon) = &C(\alpha,k_m,m_{min},m_{max},M_{max},\epsilon)
 \end{align}
 
 where $\alpha$ is the power law index, $\mathcal{R}$ is the merger rate, $m_{min}, m_{max}$ are the minimum, and maximum masses of the binary components in the population respectively, and $\sigma_e$ is the orbital eccentricity distribution. The Eq. \ref{eq:plawg} represent a truncated power law for primary mass $m_1$ with index $-\alpha$ and conditional power law distribution $p(m_2|m_1)$ for secondary mass $m_2$ using simple power law, and Gaussian distribution for orbital eccentricity $e$. 
-For our analysis, we defined the constant of integration equals to $\int_V dm_1 dm_2 d\epsilon p(m_1,m_2,\epsilon) = 1$.  Our detectors are very sensitive to high-mass BBHs, particularly $M_{max}\geq 200 M_\odot$; therefore, we will use $k_m=0$ throughout the studies. Therefore, we have our reduced form of the truncated power law in Eq. \ref{eq:plaw}
+For our analysis, we defined the constant of integration equal to $\int_V dm_1 dm_2 d\epsilon p(m_1,m_2,\epsilon) = 1$.  Our detectors are very sensitive to high-mass BBHs, particularly $M_{max}\geq 200 M_\odot$; therefore, we will use $k_m=0$ throughout the studies. Therefore, we have our reduced form of the truncated power law in Eq. \ref{eq:plaw}
 
 \begin{align}
 \label{eq:plaw}
-p(m_1,m_2,\epsilon) =   \sqrt{\frac{2}{\pi}} \frac{ m_1^{-\alpha}  e^{-(\epsilon/\sqrt{2}\sigma_\epsilon)^2}}{(m_1-m_{min})\sigma_\epsilon}  
+p(m_1,m_2,\epsilon) = \sqrt{\frac{2}{\pi}} \frac{ m_1^{-\alpha}  e^{-(\epsilon/\sqrt{2}\sigma_\epsilon)^2}}{(m_1-m_{min})\sigma_\epsilon}
 \end{align}
+
 
 \subsection{Fiducial Model for Synthetic Population}
 
-We choose fixed parameters $\alpha = -2$, $m_{min} = 10$, $m_{max}=50$ to generate a population of $N=100$ sources from the power model given in Eq. \ref{eq:plawg}. We have generated two different populations from the fiducial model to show the significance of the eccentricity on the population. The selection of all the parameters is the same for both populations instead of $\sigma_\epsilon$. This different eccentricity distribution in both models will show how the events can be missed by not including the eccentricity in our analysis.
+We have created four different populations by fixing the
+power law parameters $\alpha = -2$, $m_{min} = 10$, $m_{max}=50$. Each population has the same values for $\alpha$, $m_{min}$, and $m_{max}$ except $\sigma_\epsilon$. We selected four values of $\sigma_\epsilon = 0.05,0.1,0.15,0.2$ and each synthetic population contains $N=10000$ sources. After getting those populations, we find the probability for each event to be detected by computing the VT of each source. Finally, we will randomly pick $100$ sources for each population to perform our analysis.
 
-Furthermore, to compare the synthetic EBBHs population with the non-eccentric BBHs (NEBBHS), we have created two more different populations by scaling the existing populations using the Eq. \ref{eq:scaling} defined in \cite{2021_scaling_paper}. The Eq. \ref{eq:scaling} removes the eccentric component from the population, scales the masses, and eventually, we get a non-eccentric population to compare with the existing eccentric population.
+Our first and second weighted populations with $\sigma_\epsilon=0.05, 0.1$ are given in \ref{fig:pop3d0.05_0.1}.
+
+\begin{figure*}
+
+\includegraphics[width=0.45\textwidth]{paper/figures/pop3d0.05.png}
+\includegraphics[width=0.45\textwidth]{paper/figures/pop3d0.1.png}
+\caption{\label{fig:pop3d0.05_0.1} Synthetic Population of EBBHs. The left figure represents the population for $\sigma_\epsilon=0.05$ and right figure represetns the population for $\sigma_\epsilon=0.1$}
+
+\end{figure*}
+
+
+
+\begin{figure*}
+
+\includegraphics[width=0.45\textwidth]{paper/figures/pop3d0.15.png}
+\includegraphics[width=0.45\textwidth]{paper/figures/pop3d0.2.png}
+\caption{\label{fig:pop3d0.15_0.2} Synthetic Population of EBBHs. The left figure represents the population for $\sigma_\epsilon=0.15$ and right figure represetns the population for $\sigma_\epsilon=0.2$}
+
+\end{figure*}
+
+\subsection{Scaled Population}
+
+To compare the synthetic EBBHs population with the non-eccentric BBHs (NEBBHS), we created four more populations by scaling the existing populations using the Eq. \ref{eq:scaling} defined in \cite{2021_scaling_paper}. The Eq. \ref{eq:scaling} removes the eccentric component from the population, scales the masses, and eventually, we get non-eccentric populations to compare with the existing eccentric population.
 \begin{align}
 \label{eq:scaling}
 M^{ecc} = \frac{M}{(1-\frac{157}{24}\epsilon^2)^{3/5}}
 \end{align}
 
 
-\subsubsection{Population for $\sigma_\epsilon = 0.05$ }
+
 The first population is given in 
-  given in Fig. \ref{fig:pop3d05}.  
+given in Fig. \ref{fig:pop3d05}.  
 
-\begin{figure}[H]
-\includegraphics[width=0.45\textwidth]{paper/figures/pop3d05.png}
-\caption{\label{fig:pop3d05}\textbf{3D-Synthetic Population of EBBHs for $0\leq \sigma_e \leq 0.5$}}
-\end{figure}
+\begin{figure*}
 
+\includegraphics[width=0.45\textwidth]{paper/figures/pop0.05.png}
+\includegraphics[width=0.45\textwidth]{paper/figures/pop0.1.png}
+\caption{\label{fig:pop_0.05_0.1} The left figure shows the primary mass vs secondary mass of the EBBHs and NEBBHs with $\sigma_\epsilon =0.05$. The right figure shows the same plot but for $\sigma_\epsilon=0.1$} 
+
+\end{figure*}
+
+
+\begin{figure*}
+
+\includegraphics[width=0.45\textwidth]{paper/figures/pop0.15.png}
+\includegraphics[width=0.45\textwidth]{paper/figures/pop0.2.png}
+\caption{\label{fig:pop_0.15_0.2} The left figure shows the primary mass vs secondary mass of the EBBHs and NEBBHs with $\sigma_\epsilon =0.15$. The right figure shows the same plot but for $\sigma_\epsilon=0.2$} 
+
+\end{figure*}
 We have the total $100$ events with a minimum and maximum primary mass of $17.73 M_\odot$ and $49.14 M_\odot$, respectively. Similarly, we have the secondary minimum and maximum masses $10.11 M_\odot$ and $46.68 M_\odot$ given in Fig \ref{fig:pop2d05}.
 
-\begin{figure}[H]
-\includegraphics[width=0.45\textwidth]{paper/figures/pop2d05.png}
-\caption{\label{fig:pop2d05}\textbf{Mass distribution of EBBHs for $0\leq \sigma_e \leq 0.5$}}
-\end{figure}
+
 
 To get the non-eccentric population, we apply the Eq. \ref{eq:scaling} on the population given in Fig. \ref{fig:pop2d05} and get the new population with scaled masses. We get the new minimum and maximum values for the primary and secondary masses in Fig. \ref{fig:pop2dscal05}. 
    
-\begin{figure}[H]
-\includegraphics[width=0.45\textwidth]{paper/figures/pop2d05scl.png}
-\caption{\label{fig:pop2dscal05}\textbf{Scaled Mass distribution of NEBBHs for  $0\leq \sigma_e \leq 0.5$}}
-\end{figure}
+
 
 The significant effect after the scaling is not only the mass shift, but one may notice in Fig. \ref{fig:pop2dscal05} that $14$ sources were missed out of $100$. This reflects that we may miss the various sources by ignoring the effect of eccentricity. The mass scaling effect is visible in Fig. \ref{fig:pop2d05diff}, and we also notice that sources start missing after $e \gtrsim 0.38$.
 
-\begin{figure}[H]
-\includegraphics[width=0.45\textwidth]{paper/figures/pop2d05diff.png}
-\caption{\label{fig:pop2d05diff}\textbf{Total Mass of Binaries for EBBHs and NEBBHs for $0\leq \sigma_e \leq 0.5$:} The blue dots show the EBBHs, the orange shows scaled NEBBHs, and green color shows the increasing difference between those masses with eccentricity}
-\end{figure}
-
-\begin{figure}[H]
-\includegraphics[width=0.45\textwidth]{paper/figures/massloss05.png}
-\caption{\label{fig:population05}\textbf{The relation between eccentricity and mass loss}}
-\end{figure}
 
 
 
-\subsubsection{EBBH and NEBBH Population with $0\leq \sigma_e \leq 0.38$}
- The second population has the Gaussian distribution bounded between $0\leq \sigma_e \leq 0.38$ given in Fig. \ref{fig:pop3d038}.  
 
-\begin{figure}[H]
-\includegraphics[width=0.45\textwidth]{paper/figures/pop3d038.png}
-\caption{\label{fig:pop3d038}\textbf{3D-Synthetic Population of EBBHs for $0\leq \sigma_e \leq 0.38$}}
-\end{figure}
+
+
+
+The second population is given in Fig. \ref{fig:pop3d038}.  
+
+
 
 We have the total $100$ events with a minimum and maximum primary mass of $15.12 M_\odot$ and $49.98 M_\odot$, respectively. Similarly, we have the secondary minimum and maximum masses $10.12 M_\odot$ and $46.01 M_\odot$ given in Fig \ref{fig:pop2d038}.
 
-\begin{figure}[H]
-\includegraphics[width=0.45\textwidth]{paper/figures/pop2d038.png}
-\caption{\label{fig:pop2d038}\textbf{Mass distribution of EBBHs with $0\leq \sigma_e \leq 0.38$}}
-\end{figure}
+
+The second population is given in Fig. \ref{fig:pop3d038}.  
+
+
 
 Similarly, to get the non-eccentric population, we apply the Eq. \ref{eq:scaling} on the population given in Fig. \ref{fig:pop2d038} and get the new population with scaled masses. We get the new minimum and maximum values for the primary and secondary masses in Fig. \ref{fig:pop2d038scl}. 
    
-\begin{figure}[H]
-\includegraphics[width=0.45\textwidth]{paper/figures/pop2d038scl.png}
-\caption{\label{fig:pop2d038scl}\textbf{Scaled mass distribution of NEBBHs for $0\leq \sigma_e \leq 0.38$}}
-\end{figure}
 
-Selecting a reduced range of $\sigma_e$ leads to avoiding the missing events. Although mass gets scaled, we did not see any missing events in Fig. \ref{fig:pop2d038scl}. The mass scaling effect is visible in Fig. \ref{fig:pop2d038diff} and reflects the importance of eccentricity.
+                            
 
-\begin{figure}[H]
-\includegraphics[width=0.45\textwidth]{paper/figures/pop2d038diff.png}
-\caption{\label{fig:pop2d038diff}\textbf{Total Mass of Binaries for EBBHs and NEBBHs for $0\leq \sigma_e \leq 0.38$:} The blue dots show the EBBHs, the orange shows scaled NEBBHs, and green color shows the increasing difference between those masses with eccentricity}
-\end{figure}
+\section{Results}
 
-\begin{figure}[H]
-\includegraphics[width=0.45\textwidth]{paper/figures/massloss038.png}
-\caption{\label{fig:population038}\textbf{The relation between eccentricity and mass loss}}
-\end{figure}
+we can discuss the corner plots here.
 
-\section{Inference of Synthetic BBH Population}
+\begin{figure*}
 
+\includegraphics[width=0.95\textwidth]{paper/figures/corner0.05.png}
+\caption{\label{fig:pop3d05}\textbf{3D-Synthetic Population of EBBHs}}
+
+\end{figure*}
+Same population.
+\begin{figure*}
+
+\includegraphics[width=0.95\textwidth]{paper/figures/corner0.05scl.png}
+\caption{\label{fig:pop3d05}\textbf{3D-Synthetic Population of EBBHs}}
+
+\end{figure*}
 
 Need to write it later. 
 
