Updates from Overleaf

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -340,23 +340,13 @@ Our weighted populations with $\sigma_\epsilon=0.05, 0.1$ and $\sigma_\epsilon=0
     \label{tab:pop_prop}
 \end{table*}
 
-\begin{figure*}
+\begin{figure}[H]
 
-\includegraphics[width=0.45\textwidth]{paper/figures/pop3d0.05.png}
-\includegraphics[width=0.45\textwidth]{paper/figures/pop3d0.1.png}
-\caption{\label{fig:pop3d0.05_0.1} Synthetic Population of EBBHs. The left figure represents the population for $\sigma_\epsilon=0.05$ and right figure represetns the population for $\sigma_\epsilon=0.1$}
-
-\end{figure*}
-
-
-
-\begin{figure*}
-
-\includegraphics[width=0.45\textwidth]{paper/figures/pop3d0.15.png}
 \includegraphics[width=0.45\textwidth]{paper/figures/pop3d0.2.png}
-\caption{\label{fig:pop3d0.15_0.2} Synthetic Population of EBBHs. The left figure represents the population for $\sigma_\epsilon=0.15$ and right figure represents the population for $\sigma_\epsilon=0.2$}
+\caption{\label{fig:pop3d0.2} Synthetic Population of EBBHs. The left figure represents the population for $\sigma_\epsilon=0.05$ and right figure represetns the population for $\sigma_\epsilon=0.1$}
 
-\end{figure*}
+\end{figure}
+
 
 \subsection{Scaled Population}
 
@@ -387,17 +377,8 @@ M^{ecc} = \frac{M}{(1-\frac{157}{24}\epsilon^2)^{3/5}}
 \begin{figure*}
 
 \includegraphics[width=0.45\textwidth]{paper/figures/pop0.05.png}
-\includegraphics[width=0.45\textwidth]{paper/figures/pop0.1.png}
-\caption{\label{fig:pop_0.05_0.1} The left figure shows the primary mass vs secondary mass of the EBBHs and NEBBHs with $\sigma_\epsilon =0.05$. The right figure shows the same plot but for $\sigma_\epsilon=0.1$} 
-
-\end{figure*}
-
-
-\begin{figure*}
-
-\includegraphics[width=0.45\textwidth]{paper/figures/pop0.15.png}
 \includegraphics[width=0.45\textwidth]{paper/figures/pop0.2.png}
-\caption{\label{fig:pop_0.15_0.2} The left figure shows the primary mass vs secondary mass of the EBBHs and NEBBHs with $\sigma_\epsilon =0.15$. The right figure shows the same plot but for $\sigma_\epsilon=0.2$} 
+\caption{\label{fig:pop_0.05_0.2} The left figure shows the primary mass vs secondary mass of the EBBHs and NEBBHs with $\sigma_\epsilon =0.05$. The right figure shows the same plot but for $\sigma_\epsilon=0.2$} 
 
 \end{figure*}
 
@@ -433,15 +414,15 @@ we can discuss the corner plots here.
 
 \begin{figure*}
 
-\includegraphics[width=0.95\textwidth]{paper/figures/corner0.05.png}
-\caption{\label{fig:pop3d05}\textbf{3D-Synthetic Population of EBBHs}}
+\includegraphics[width=0.95\textwidth]{paper/figures/corfig_0.05.png}
+\caption{\label{fig:pop3d05}\textbf{Corner Plots for EBBHs and BBHS with $\sigma_\epsilon=0.05$}}
 
 \end{figure*}
 Same population.
 \begin{figure*}
 
-\includegraphics[width=0.95\textwidth]{paper/figures/corner0.05scl.png}
-\caption{\label{fig:pop3d05}\textbf{3D-Synthetic Population of EBBHs}}
+\includegraphics[width=0.95\textwidth]{paper/figures/corfig_0.2.png}
+\caption{\label{fig:pop3d05}\textbf{Corner Plots for EBBHs and BBHs with $\sigma_\epsilon=0.2$}}
 
 \end{figure*}
 
