--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -361,13 +361,13 @@ M^{ecc} = \frac{M}{(1-\frac{157}{24}\epsilon^2)^{3/5}}
 
 \begin{table*}[]
     \centering
-    \begin{tabular}{|ccccccc|}
+    \begin{tabular}{|ccccc|}
         \hline
-        $\sigma_\epsilon$ & $m^1_{min} [M_\odot] $ & $m^1_{max} [M_\odot]$ & $m^2_{min} [M_\odot]$ & $m^2_{max} [M_\odot]$ & $\epsilon_{min}$ & $\epsilon_{max}$\\ \hline
-        0.05 & 16.68 & 49.64 & 10.77 & 46.75 & 0.01 & 0.05\\ \hline
-        0.1 & 18.95 & 49.51 & 9.89 & 48.33 & 0.05 & 0.1\\ \hline
-        0.15 & 9.13 & 49.55 & 9.1 & 49.11 & 0.1 & 0.15\\ \hline
-        0.2 & 18.2 & 49.79 & 10.3 & 47.08 & 0.15 & 0.2\\ \hline
+        $\sigma_\epsilon$ & $m^1_{min} [M_\odot] $ & $m^1_{max} [M_\odot]$ & $m^2_{min} [M_\odot]$ & $m^2_{max} [M_\odot]$ \\ \hline
+        0.05 & 16.68 & 49.64 & 10.77 & 46.75 \\ \hline
+        0.1 & 18.95 & 49.51 & 9.89 & 48.33 \\ \hline
+        0.15 & 9.13 & 49.55 & 9.1 & 49.11  \\ \hline
+        0.2 & 18.2 & 49.79 & 10.3 & 47.08  \\ \hline
     \end{tabular}
     \caption{Scaled Population Properties}
     \label{tab:popscl_prop}
@@ -408,8 +408,36 @@ The significant effect after the scaling is not only the mass shift, but one may
 
                             
 
-\section{Results}
+\section{Population Inference}
 
+\begin{table*}[]
+    \centering
+    \begin{tabular}{c|ccccc}
+        \hline
+        & $log_{10}(\frac{\mathcal{R}}{Gpc^{-3}yr^-1})$ & $\alpha$ & $m_{min} [M_\odot] $ & $m_{max} [M_\odot]$ & $\sigma_\epsilon$ \\ \hline
+      Population 1 & $1.88^{+0.18}_{-0.59}$ & $-1.41^{+1.29}_{-0.97}$ & $5.47^{+1.74}_{-1.74}$ & $69.67^{+10.20}_{-10.75}$ & $0.05^{+0.35}_{-0.02}$ \\ \hline
+      Population 2 & $1.89^{+0.15}_{-0.56}$ & $-0.99^{+1.01}_{-0.85}$ & $5.52^{+1.75}_{-1.80}$ & $69.74^{+10.64}_{-10.95}$ & $0.07^{+0.33}_{-0.02}$ \\ \hline
+      Population 3 & $1.90^{+0.14}_{-0.53}$ & $-0.94^{+0.94}_{-0.82}$ & $5.63^{+2.02}_{-1.92}$ & $69.73^{+10.92}_{-11.07}$ & $0.10^{+0.30}_{-0.02}$  \\ \hline
+      Population 4 & $1.91^{+0.18}_{-0.55}$ & $-1.89^{+1.44}_{-1.00}$ & $5.48^{+1.87}_{-1.90}$ & $69.26^{+11.43}_{-10.96}$ & $0.14^{+0.29}_{-0.03}$  \\ \hline
+    \end{tabular}
+    \caption{Weighted Population Inference}
+    \label{tab:inference_EBBHS}
+\end{table*}
+
+
+\begin{table*}[]
+    \centering
+    \begin{tabular}{c|cccc}
+        \hline
+        & $log_{10}(\frac{\mathcal{R}}{Gpc^{-3}yr^-1})$ & $\alpha$ & $m_{min} [M_\odot] $ & $m_{max} [M_\odot]$ \\ \hline
+      Population 1 & $1.89^{+0.17}_{-0.43}$ & $-1.68^{+1.08}_{-0.80}$ & $5.49^{+2.38}_{-2.41}$ & $68.83^{+14.66}_{-13.13}$  \\ \hline
+      Population 2 & $1.89^{+0.13}_{-0.43}$ & $-0.90^{+0.72}_{-0.68}$ & $5.40^{+2.29}_{-2.40}$ & $68.61^{+14.69}_{-13.33}$  \\ \hline
+      Population 3 & $1.89^{+0.13}_{-0.44}$ & $-0.57^{+0.65}_{-0.67}$ & $5.72^{+2.48}_{-2.40}$ & $68.74^{+14.30}_{-12.99}$   \\ \hline
+      Population 4 & $1.89^{+0.14}_{-0.45}$ & $-1.20^{+0.81}_{-0.71}$ & $5.32^{+2.33}_{-2.38}$ & $68.83^{+14.51}_{-12.95}$  \\ \hline
+    \end{tabular}
+    \caption{Scaled Population Inference}
+    \label{tab:inference_NEBBHS}
+\end{table*}
 we can discuss the corner plots here.
 
 \begin{figure*}
