Updates from Overleaf

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -336,7 +336,7 @@ Our weighted populations with $\sigma_\epsilon=0.05, 0.1$ and $\sigma_\epsilon=0
         Third 3 & 10.04 & 49.9 & 10.01 & 49.2 & 0.1 & 0.15\\ \hline
         Forth 4 & 19.6 & 49.97 & 10.73 & 48.39 & 0.15 & 0.2\\ \hline
     \end{tabular}
-    \caption{Weighted Population Properties}
+    \caption{Population Properties of EBBHs}
     \label{tab:pop_prop}
 \end{table*}
 
@@ -369,7 +369,7 @@ M^{ecc} = \frac{M}{(1-\frac{157}{24}\epsilon^2)^{3/5}}
         Third & 9.13 & 49.55 & 9.1 & 49.11  \\ \hline
         Forth & 18.2 & 49.79 & 10.3 & 47.08  \\ \hline
     \end{tabular}
-    \caption{Scaled Population Properties}
+    \caption{Population Properties of NEBBHs}
     \label{tab:popscl_prop}
 \end{table*}
  
