Updates from Overleaf

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -118,9 +118,10 @@
 \begin{document}
 
 \title{Population Inference of Non-Spinning Eccentric Binary Black Holes}
-\author{M. Zeeshan}
+%\author{R. O'Shaughnessy}
 \affiliation{\RIT}
-\author{R. O'Shaughnessy}
+%\author{M. Zeeshan}
+
 \affiliation{\RIT}
 \begin{abstract}
 Yet to work. 
@@ -131,31 +132,31 @@ Yet to work.
 Big Picture
 \begin{itemize}
     \item GWs are important
-    \item ecccentricity is a signature that can be measued with GWs
+    \item eccentricity is a signature that can be measured with GWs
     \item it is a unique signature of strong events
 \end{itemize}
 Why Population, smaller picture
 \begin{itemize}
     \item population inference of eccentricity is important.
-    \item some events may have unabmoguis eccentricty (refs to PE, richard will send them), but many will have only faint signatures or none at all.
-    \item critical for astrophysoics to acces distribution of eccentricites and any subpopulation
+    \item Some events may have unabmoguis eccentricity (refs to PE, Richard will send them), but many will have only faint signatures or none at all.
+    \item critical for astrophysics to acces distribution of eccentricities and any subpopulation
 \end{itemize}
 Previous work
 \begin{itemize}
-    \item What other people have done with eccentricty, 
-    \item cite any preious work realted to eccentricty with population.
-    \item mostly it's real events or high mass evenets
-    \item what sort of eccentricy we expect to appear
+    \item What other people have done with eccentricity, 
+    \item cite any previous work related to eccentricity with population.
+    \item mostly it's real events or high mass events
+    \item what sort of eccentricity we expect to appear
 \end{itemize}
 \begin{itemize}
-    \item Explain,what and how you are doing here.
-    \item assess how well eccentricity of population  can be inferreed using low mass BHS where eccentricity measurement should be much more precise.
+    \item Explain, what and how you are doing here.
+    \item assesses how well the eccentricity of the population  can be inferred using low mass BHS where eccentricity measurement should be much more precise.
     \item for simplicity using a proof of concept population model to emphasize eccentric inference
 \end{itemize}
 
 We discussed the various formation scenario of EBBHs in the previous section; each one has a distinct signature in the GW signals. Hence, it's trivial to observe the effect of each scenario or the mixed effect on the merging population. It leads us to make the population model, which considers each scenario and allows distinct merger rates for them.
 
-Most of the eccentric binary black hole (EBBHs) are driven by low masses $(10M_\odot-30M_\odot)$ and if any component of the binary have mass less than $30 M_\odot$ then only $10\%$ of them are able to maintain eccentricity near the last stable orbit.  \cite{mass_ecc_limit_2018}. Therefore,  in this study, we  will consider binaries with non-spinning $(\chi_i = 0)$, eccentric $(0-0.5)$ and moderate mass range $(10M_\odot-50M_\odot)$. In addition, we will use mass ratio $q=m_1/m_2$ with condition $m_1>m_2$ and total mass $M=m_1+m_2=100M_\odot$.
+Most of the eccentric binary black holes (EBBHs) are driven by low masses $(10M_\odot-30M_\odot)$ and if any component of the binary has mass less than $30 M_\odot$ then only $10\%$ of them are able to maintain eccentricity near the last stable orbit.  \cite{mass_ecc_limit_2018}. Therefore,  in this study, we  will consider binaries with non-spinning $(\chi_i = 0)$, eccentric $(0-0.5)$ and moderate mass range $(10M_\odot-50M_\odot)$. In addition, we will use mass ratio $q=m_1/m_2$ with condition $m_1>m_2$ and total mass $M=m_1+m_2=100M_\odot$.
 
 
 
@@ -348,7 +349,7 @@ Our weighted populations with $\sigma_\epsilon=0.05, 0.1$ and $\sigma_\epsilon=0
 \end{figure}
 
 
-\subsection{Scaled Population}
+\subsection{Synthetic parameter inference with eccentricity}
 
 To compare the synthetic EBBHs population with the non-eccentric BBHs (NEBBHS), we created four more populations by scaling the existing populations using the Eq. \ref{eq:scaling} defined in \cite{2021_scaling_paper}. The Eq. \ref{eq:scaling} removes the eccentric component from the population, scales the masses, and eventually, we get non-eccentric populations to compare with the existing eccentric population.
 \begin{align}
