Rewriting the method and synthetic population section

--- a/paper/paperexport.bib
+++ b/paper/paperexport.bib
@@ -153,6 +153,19 @@
     arxivId = {1805.06442}
 }
 
+@article{alpha_error_2015,
+    title = {{SYSTEMATIC ERRORS IN LOW-LATENCY GRAVITATIONAL WAVE PARAMETER ESTIMATION IMPACT ELECTROMAGNETIC FOLLOW-UP OBSERVATIONS}},
+    year = {2016},
+    journal = {The Astrophysical Journal},
+    author = {Littenberg, Tyson B. and Farr, Ben and Coughlin, Scott and Kalogera, Vicky},
+    number = {1},
+    month = {3},
+    pages = {7},
+    volume = {820},
+    doi = {10.3847/0004-637X/820/1/7},
+    issn = {1538-4357}
+}
+
 @article{2017FishBach_BBH_model,
     title = {{Where Are LIGO’s Big Black Holes?}},
     year = {2017},
