--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -116,7 +116,7 @@
 \def\RIT{Center for Computational Relativity and Gravitation, Rochester Institute of Technology, Rochester, New York 14623, USA}
 
 \begin{document}
-
+\renewcommand{\arraystretch}{1.5}
 \title{Population Inference of Non-Spinning Eccentric Binary Black Holes}
 %\author{R. O'Shaughnessy}
 \affiliation{\RIT}
@@ -163,24 +163,23 @@ Most of the eccentric binary black holes (EBBHs) are driven by low masses $(10M_
 \section{Methods}
 \label{sec:methods}
 
-The coalescing BBH can be completely described by three intrinsic and seven extrinsic parameters. The intrinsic parameters mass of binary component ($m_i$), spin $( \chi_i)$, and eccentricity $\epsilon$  are subject to the orbital evolution of the binary. The extrinsic parameters are orientation (orbital phase, polarization, and inclination), sky location (right ascension and declination), luminosity distance, and coalescence time depend on the observer.
+The coalescing BBH can be completely described by three intrinsic and seven extrinsic parameters. The intrinsic parameters such as mass of binary component ($m_i$), spin $( \chi_i)$, and eccentricity $\epsilon$  are subject to the orbital evolution of the binary. The extrinsic parameters are orientation (orbital phase, polarization, and inclination), sky location (right ascension and declination), luminosity distance, and coalescence time depend on the observer.
 
 
 
 \subsection{Hierarchical Bayesian Modeling (HBM)}
 
 
+We use HBM to constrain the population models with gravitational wave signals. It is also a good choice to consider the sensitivity of LIGO-VIRGO-KAGRA (LVK) and uncertainty in each detection.
 
-Once we have the population models, our next obstacle is constraining them with observational data. While constraining the model, we must consider the sensitivity of LIGO-VIRGO-KAGRA (LVK) and uncertainty in each detection. Therefore, the HBM is a good choice to constrain the population model.
-
-In the HBM, we have the N number of discrete detection, in our case, from LVK. Those detections provide merger data denoted as $d_1,d_2,d_3,...,d_N$ where each $d_i$ shows the BBH. Each $d_i$ or merger has mass, spin, and eccentricity properties. These properties, often called parameters, are denoted by $\lambda_1,\lambda_2,\lambda_3,...,\lambda_i$. Each parameter has its uncertainty, and we express it by the probability of the data given the parameter value. We also refer to it as the likelihood function $\mathcal{L}(\lambda)=p(d|\lambda)$ of one event/detection. The given value of $\lambda$ to calculate the likelihood is obtained from the mathematical model of the waveform. Once you have a likelihood function, you can use a prior (usually, a uniform) to find the posterior probability using the Bayes theorem.
+In HBM, we have the N number of discrete detections. Those detections provide merger data denoted as $d_1,d_2,d_3,...,d_N$ where each $d_i$ shows a BBH merger. Each $d_i$ has mass, spin, and eccentricity properties. These properties, often called parameters, are denoted by $\lambda_1,\lambda_2,\lambda_3,...,\lambda_i$. Each parameter has its uncertainty, and we express it by the probability of the data given the parameter value. We also refer to it as the likelihood function $\mathcal{L}(\lambda)=p(d|\lambda)$ of one event. A given value of $\lambda$ is obtained from a mathematical model commonly known as a waveform to calculate a likelihood. Once you have a likelihood function, you may use a uniform prior or any other prior to find a posterior probability using the Bayes theorem as given in Eq. \ref{eq:Bayes_ind}
 
 \begin{equation}
 \label{eq:Bayes_ind}    
-p(\lambda|d) \propto p(d|\lambda) p(\lambda)
+p(\lambda|d) \propto p(d|\lambda) p(\lambda).
 \end{equation}
 
-This posterior probability will constrain the properties of each binary, such as mass, spin, and eccentricity. We may get the inference of those parameters using Rapid parameter Inference on gravitational wave sources via Iterative Fitting (RIFT): an open source code for parameter estimation of the binary sources \cite{rift_2018}.
+This posterior probability will constrain the properties of each binary, such as mass, spin, and eccentricity. We may infer those parameters using rapid parameter inference on gravitational wave sources via iterative fitting (RIFT): an open source code for parameter estimation (PE) of the binary sources \cite{rift_2018}.
 
 
 
@@ -200,7 +199,7 @@ This posterior probability will constrain the properties of each binary, such as
 
 \subsection{Population Inference}
 
-Now having the parameters of individual sources, we are ready to make a population inference. Following the Bayesian framework for inference, our first task is to find the likelihood of the population parameter $\Lambda$, also considered as uncertainty in $\Lambda$ equivalent to the probability of the individual sources given the population parameter $\Lambda$ written as follows. 
+Now having the PE of individual sources, we will follow the Bayesian framework for population inference. The likelihood of a population parameter $\Lambda$, also considered as uncertainty in $\Lambda$ is equivalent to the probability of the individual sources given the population parameter $\Lambda$ is written as follows. 
 
 \begin{equation}
 \label{eq:likelihood_pop}    
@@ -209,58 +208,28 @@ Now having the parameters of individual sources, we are ready to make a populati
 
  
 
-The second step is to find the posterior probability, and we can do this by using the above likelihood in the Bayes theorem as given below.
+We will use the likelihood given in Eq. \ref{eq:likelihood_pop} in the Bayes theorem given in Eq. \ref{eq:Bayes} to find the posterior probability.
 
 \begin{equation}
 \label{eq:Bayes}    
-p(\Lambda|d_1,d_2,...,d_N)= \frac{p(\Lambda)p(d_1,d_2,...,d_N|\Lambda)}{p(d_1,d_2,...,d_N)}
+p(\Lambda|d_1,d_2,...,d_N)= \frac{p(\Lambda)p(d_1,d_2,...,d_N|\Lambda)}{p(d_1,d_2,...,d_N)},
 \end{equation}
 
-where $p(\Lambda|d_1,d_2,d_3,...,d_N)$ is posterior, $p(\Lambda)$ is prior, $p(d_1,d_2,d_3,...,d_N)$ is normalization constant or sometime known as evidence.
+where $p(\Lambda|d_1,d_2,d_3,...,d_N)$ is posterior, $p(\Lambda)$ is prior, $p(d_1,d_2,d_3,...,d_N)$ is normalization constant or also known as evidence.
 
-To conduct our specific analysis for mass and eccentricity distribution, we will use the inhomogeneous Poisson Process scaled by rate $\mathcal{R} = \frac{dN}{dtdV_c}$ and parameterize by $\Lambda$ to find the likelihood  $\mathcal{L}(\mathcal{R},\Lambda)\equiv p(D|\mathcal{R},\Lambda)$ of an astrophysical population given the merger rate and parameter $\Lambda$. 
+To conduct our analysis for mass and eccentricity distribution, we will use the inhomogeneous Poisson process scaled by rate $\mathcal{R} = \frac{dN}{dtdV_c}$ and parameterize by $\Lambda$ to find the likelihood  $\mathcal{L}(\mathcal{R},\Lambda)\equiv p(D|\mathcal{R},\Lambda)$ of an astrophysical population given the merger rate and parameter $\Lambda$. 
 
 \begin{equation}
 \label{eq: likelihood}
 \mathcal{L}(\mathcal{R},\Lambda) \propto e^{-\mu(\mathcal{R},\Lambda)}\prod_{n=1}^N\int d\lambda \ell_n(\lambda) \mathcal{R} p(\lambda|\Lambda),
 \end{equation}
 
-Where $\mu(\mathcal{R},\Lambda)$ is the expected number of detection under the given population parametrization $\Lambda$ with the overall rate $\mathcal{R}$. $\ell_n(\lambda)=p(d_n|\lambda)$ is the likelihood of the data $d_n$ given binary parameter.
-Finally, we will get our posterior as $p(\mathcal{R},\Lambda)\propto p(\mathcal{R},\Lambda)  \mathcal{L}(\mathcal{R},\Lambda)$.
+where $\mu(\mathcal{R},\Lambda)$ is the expected number of detection under the given population parametrization $\Lambda$ with the overall rate $\mathcal{R}$. $\ell_n(\lambda)=p(d_n|\lambda)$ is the likelihood of the data $d_n$ given binary parameter.
+Finally, we will get our posterior as $p(\mathcal{R},\Lambda | D)\propto p(\mathcal{R},\Lambda)  \mathcal{L}(\mathcal{R},\Lambda)$ by choosing a prior $p(\mathcal{R},\Lambda)$.
 
-These calculations are analytically intractable and must be performed numerically. Specifically, we will use Goodman and Weare's affine invariant Markov chain Monte Carlo (MCMC) \cite{mcmc_paper} method to find the posterior distribution of population parameters. This method draws samples from the targeted distribution for $\Lambda$; in our case, it's the power law model given in Eq. \ref{eq:plawg}, then compares it with the given data (collection of individual events) and store the best-fit sample. We may iterate this as we need and store multiple sample values untill they converge. 
+These calculations are analytically intractable and must be performed numerically. Specifically, we will use Goodman and Weare's affine invariant Markov chain Monte Carlo (MCMC) \cite{mcmc_paper} to find the posterior distribution of population parameters. This method draws samples from the targeted distribution for $\Lambda$, in our case, it's the power law model given in Eq. \ref{eq:plawg}, then compares it with the given data (collection of individual events) and stores the best-fit sample. We may iterate this as we need and store multiple sample values untill they converge. 
 This method is in a Python package called EMCEE \cite{emcee_paper}.
 
-
-
-
-
-%\begin{itemize}
-%    \item We have the parameter estimation from RIFT or any other method. It will give us a distribution for each parameter, and we may take the mean value of it.
- %   \item Our first task is to find the likelihood function for the population parameters: such as mass and eccentricity.
-%    \item We denote population parameters with \\ $\Lambda \equiv  (\alpha, \mathcal{R}, m_{min}, m_{max}, e)$.
-%    \item uncertainty in $\Lambda$ is a likelihood which can be written as $\mathcal{L}(\Lambda)\equiv p(d_1,d_2,d_3,...,d_N|\Lambda)$
-%    \item By applying the Bayes theorem, we can turn above likelihood into posterior probability of a parameter.
-%\begin{equation}
-%\label{eq:Bayes}    
-%p(\Lambda|d_1,d_2,...,d_N)= \frac{p(\Lambda)p(d_1,d_2,...,d_N|\Lambda)}{p(d_1,d_2,...,d_N)}
-%\end{equation}
-
-%    \item where $p(\Lambda|d_1,d_2,d_3,...,d_N)$ is posterior, $p(\Lambda)$ is prior, $p(d_1,d_2,d_3,...,d_N)$ is normalization/evidence, and $p(d_1,d_2,d_3,...,d_N|\Lambda)$ is likelihood.
- 
-%   \item We will use inhomogeneous Poisson Process scaled by rate $\mathcal{R} = \frac{dN}{dtdV_c}$ and parameterize by $\Lambda$ to find the likelihood  $\mathcal{L}(\mathcal{R},\Lambda)\equiv p(D|\mathcal{R},\Lambda)$ of an astrophysical population given the merger rate and parameter $\Lambda$. 
-%    {\color{red}I think these values of $\Lambda$ are provided by the power law model}. \\
-%\begin{equation}
-%\label{eq: likelihood}
-%\mathcal{L}(\mathcal{R},\Lambda) \propto e^{-%\mu(\mathcal{R},\Lambda)}\prod_{n=1}^N\int d\lambda %\ell_n(\lambda) \mathcal{R} p(\lambda|\Lambda)    
-%\end{equation}
-        
-%    \item where $\mu(\mathcal{R},\Lambda)$ are the expected number of detections under the given population parametrization $\Lambda$ with overall rate $\mathcal{R}$. $l_n(\lambda)=p(d_n|\lambda)$ is the likelihood of the data $d_n$ given binary parameter.
- %   \item now we can find the posterior by Baye's theorem. \\
- %   $p(\mathcal{R},\Lambda)\propto p(\mathcal{R},\Lambda)  \mathcal{L}(\mathcal{R},\Lambda)$
-%    \item calculation of this posterior is computationally expensive, therefore, we will use MCMC method to find the posterior distribution.
-    
-%\end{itemize}
 
 \subsection{Volume Time (VT) Estimation}
 
@@ -277,79 +246,97 @@ where $D(z)$ is the luminosity distance for redshift $z$, $V_c$ is the comoving 
 
 \begin{equation}
 \label{eq:mu}
-  \mu(\mathcal{R},\Lambda) = \int(VT)\lambda \mathcal{R}p(\lambda|\Lambda)d\lambda  
+  \mu(\mathcal{R},\Lambda) = \int(VT)\lambda \mathcal{R}p(\lambda|\Lambda)d\lambda ,
 \end{equation}
 where $p(\lambda|\Lambda)$ is the probability density function for a random binary in the universe to have intrinsic parameter $\lambda$. Keep in mind that $\lambda$ is equal to all intrinsic and extrinsic parameters.
 
-%\begin{itemize}
-%    \item Estimation of VT (sensitivity of the LVK) only depend on the mass. For the sake of simplicity {\color{red}(physics reason)}, we consider only non-spinning, non-eccentric and nonprecessing BH Binaries. 
-%    \item Sources are detected if SNR is greater than 8.
-%    \item V is characteristic volume in which source can be detected by LVK. It is orientation averaged sensitive 3-volume.
-%\begin{equation}
-%\label{eq:volume}
-%V(\lambda) = \int P((<D(z))/D_n(\lambda))\frac{dV_c}{dz}\frac{dz}{1+z}
-%\end{equation}    
-%    \item where $D(z)$ is the luminosity distance for redshift z, $V_c$ is the comoving volume.
-
-%    \item to compute the $\mu(\mathcal{R},\Lambda)$, we use previously defined Volume in $Gpc^{-3}yr^{-1}$ and observing at this sensitivity for the time $T$, the average number of detection would be as follows: \\
-%\begin{equation}
-%\label{eq:mu}
-%  \mu(\mathcal{R},\Lambda) = \int(VT)\lambda \mathcal{R}p(\lambda|\Lambda)d\lambda  
-%\end{equation}
-%    \item where $p(\lambda|\Lambda)$ is the probability density function for a random binary in the universe to have intrinsic paramter $\lambda$. Keep in mind that $\lambda$ is equal to all the 15 parameters of a binary.
-%\end{itemize}
 
 \subsection{Power law Model}
-There are various weak and pure phenomenological population models proposed in previous studies \cite{2016PRXAbbot_BBH_model,2017FishBach_BBH_model,2018talbot_bbh_model}. However, our analysis used the pure truncated power law defined in \cite{2016PRXAbbot_BBH_model,2017FishBach_BBH_model} and added the Gaussian eccentricity. This model computes the intrinsic probability of $m_1$, $m_2$, and $\epsilon$.  
+There are various weak and pure phenomenological population models proposed in previous studies \cite{2016PRXAbbot_BBH_model,2017FishBach_BBH_model,2018talbot_bbh_model}. However, our analysis used the pure truncated power law defined in \cite{2016PRXAbbot_BBH_model,2017FishBach_BBH_model} and Gaussian eccentricity. This model computes the intrinsic probability of $m_1$, $m_2$, and $\epsilon$.  
 We also assume that non-zero probability density only exists for $m_{min}\leq m_2 \leq m_1 \leq m_{max}$ and for total mass $M_{max}=m_1+m_2 = 200 M_\odot$. The condition of the total mass is only because of the limitations of the detectors towards the higher masses \cite{2016PRXAbbot_BBH_model}. The generalized form of the truncated power-law model with parameters $\Lambda \equiv  (\alpha, \mathcal{R}, k_m, m_{min}, m_{max}, \sigma_\epsilon, M_{max})$ and random variable $m_1$, $m_2$, and $\epsilon$ has the functional form in Eq. \ref{eq:plawg} within provided mass limit.
 
 
 \begin{align}
 \label{eq:plawg}
 p(m_1,m_2,\epsilon) = &C(\alpha,k_m,m_{min},m_{max},M_{max},\epsilon)  
-\nonumber \\ & \sqrt{\frac{2}{\pi}} \frac{(m_2/m_1)^{k_m} m_1^{-\alpha} e^{-(\epsilon/\sqrt{2}\sigma_\epsilon)^2}}{(m_1-m_{min})\sigma_\epsilon} 
+\nonumber \\ & \sqrt{\frac{2}{\pi}} \frac{(m_2/m_1)^{k_m} m_1^{-\alpha} e^{-(\epsilon/\sqrt{2}\sigma_\epsilon)^2}}{(m_1-m_{min})\sigma_\epsilon},
 \end{align}
 
-where $\alpha$ is the power law index, $\mathcal{R}$ is the merger rate, $m_{min}, m_{max}$ are the minimum, and maximum masses of the binary components in the population respectively, and $\sigma_e$ is the orbital eccentricity distribution. The Eq. \ref{eq:plawg} represent a truncated power law for primary mass $m_1$ with index $-\alpha$ and conditional power law distribution $p(m_2|m_1)$ for secondary mass $m_2$ using simple power law, and Gaussian distribution for orbital eccentricity $e$. 
-For our analysis, we defined the constant of integration equal to $\int_V dm_1 dm_2 d\epsilon p(m_1,m_2,\epsilon) = 1$.  Our detectors are very sensitive to high-mass BBHs, particularly $M_{max}\geq 200 M_\odot$; therefore, we will use $k_m=0$ throughout the studies. Therefore, we have our reduced form of the truncated power law in Eq. \ref{eq:plaw}
+where $\alpha$ is the power law index, $\mathcal{R}$ is the merger rate, $m_{min}, m_{max}$ are the minimum and maximum masses of the binary components in the population, and $\sigma_e$ is the orbital eccentricity distribution. The Eq. \ref{eq:plawg} represent a truncated power law for primary mass $m_1$ with index $-\alpha$ and conditional power law distribution $p(m_2|m_1)$ for secondary mass $m_2$ using simple power law, and Gaussian distribution for orbital eccentricity $e$. 
+For our analysis, we defined a constant of integration equal to $\int_V dm_1 dm_2 d\epsilon p(m_1,m_2,\epsilon) = 1$.  Our detectors are sensitive to high-mass BBHs, particularly $M_{max}\geq 200 M_\odot$, therefore, we will use $k_m=0$ throughout the studies. As a result, we have our reduced form of the truncated power law in Eq. \ref{eq:plaw}
 
 \begin{align}
 \label{eq:plaw}
 p(m_1,m_2,\epsilon) = \sqrt{\frac{2}{\pi}} \frac{ m_1^{-\alpha}  e^{-(\epsilon/\sqrt{2}\sigma_\epsilon)^2}}{(m_1-m_{min})\sigma_\epsilon}
 \end{align}
 
+\section{Synthetic Population}
 
-\subsection{Fiducial Model for Synthetic Population}
+We have created four synthetic populations by choosing the power law parameters $\alpha = -1$, $m_{min} = 10$, $m_{max}=50$. Each population has the same values for $\alpha$, $m_{min}$, and $m_{max}$ except $\sigma_\epsilon$. We selected four values for $\sigma_\epsilon = 0.05, 0.1, 0.15, 0.2$, and  generated synthetic population containing $N=10000$ sources.
 
-We have created four different populations by fixing the
-power law parameters $\alpha = -2$, $m_{min} = 10$, $m_{max}=50$. Each population has the same values for $\alpha$, $m_{min}$, and $m_{max}$ except $\sigma_\epsilon$. We selected four values of $\sigma_\epsilon = 0.05,0.1,0.15,0.2$ and each synthetic population contains $N=10000$ sources. After getting those populations, we find the probability for each event to be detected by computing the VT of each source. Finally, we will randomly pick $100$ sources for each population to perform our analysis.
+\subsection{Synthetic population with eccentricity}
 
-Our weighted populations with $\sigma_\epsilon=0.05, 0.1$ and $\sigma_\epsilon=0.15, 0.2$ are given in Fig. \ref{fig:pop3d0.05_0.1} and Fig. \ref{fig:pop3d0.15_0.2} respectively. 
- 
+After generating four populations, we find the probability for each event to be detected by computing the VT of each source. Finally, we did the weighting based on these VTs and randomly picked $N=100$ sources from each population to perform our analysis. Our weighted populations with $\sigma_\epsilon=0.05$ and $\sigma_\epsilon=0.2$ are given in Fig. \ref{fig:pop3d0.05_0.2}.  The complete description of each EBBHs population is given in Table \ref{tab:pop_prop}.
+
+\begin{figure*}[]
+\includegraphics[width=0.45\textwidth]{paper/figures/pop3d_0.05.png}
+\includegraphics[width=0.45\textwidth]{paper/figures/pop3d_0.2.png}
+\caption{\label{fig:pop3d0.05_0.2} Synthetic Population of EBBHs. The left figure represents the population for $\sigma_\epsilon=0.05$ and right figure represents the population for $\sigma_\epsilon=0.2$}
+\end{figure*}
+
 
 \begin{table*}[]
     \centering
     \begin{tabular}{c|cccccc}
-        \hline
-        Populations & $m^1_{min} [M_\odot] $ & $m^1_{max} [M_\odot]$ & $m^2_{min} [M_\odot]$ & $m^2_{max} [M_\odot]$ & $\epsilon_{min}$ & $\epsilon_{max}$\\ \hline
-        First 1 & 16.81 & 49.81 & 10.8 & 46.82 & 0.01 & 0.05\\ \hline
-        Second 2 & 19.03 & 49.93 & 10.1 & 48.64 & 0.05 & 0.1\\ \hline
-        Third 3 & 10.04 & 49.9 & 10.01 & 49.2 & 0.1 & 0.15\\ \hline
-        Forth 4 & 19.6 & 49.97 & 10.73 & 48.39 & 0.15 & 0.2\\ \hline
+        \hline \hline
+        Populations & $m_{1_{min}} [M_\odot] $ & $m_{1_{max}} [M_\odot]$ & $m_{2_{min}} [M_\odot]$ & $m_{2_{max}} [M_\odot]$ & $\epsilon_{min}$ & $\epsilon_{max}$\\ \hline
+        First  & 12.19 & 49.89 & 10.17 & 46.67 & 0.0004 & 0.0494\\ \hline
+        Second  & 15.42 & 49.79 & 10.46 & 47.59 & 0.0003 & 0.0999\\ \hline
+        Third  & 16.17 & 49.83 & 10.69 & 47.52 & 0.0002 & 0.148\\ \hline
+        Forth  & 12.52 & 49.89 & 10.08 & 49.51 & 0.0012 & 0.1984\\ \hline
     \end{tabular}
     \caption{Population Properties of EBBHs}
     \label{tab:pop_prop}
 \end{table*}
+To make our study more realistic, we must add the measurement error in each source. The chirp mass and symmetric mass ratio are well-constrained compared to the primary and secondary masses of BBHs. Therefore, we compute the chirp mass and symmetric mass ratio of each event in the population by using the following relations.
 
-\begin{figure}[H]
+\begin{equation}
+    M_c^T = \frac{(m_1 m_2)^{3/5}}{(m_1+m_2)^{1/5}},
+\end{equation}
 
-\includegraphics[width=0.45\textwidth]{paper/figures/pop3d0.2.png}
-\caption{\label{fig:pop3d0.2} Synthetic Population of EBBHs. The left figure represents the population for $\sigma_\epsilon=0.05$ and right figure represetns the population for $\sigma_\epsilon=0.1$}
+\begin{equation}
+    \eta^T = \frac{(m_1 m_2)}{(m_1+m_2)^2},
+\end{equation}
+where $M_c^T$ and $\eta^T$ are found using the primary and secondary masses of each event generated by the power law model.
+Furthermore, using the following relations, We add the measurement errors in the $M_c^T$ and $\eta^T$.
+\begin{equation}
+    M_c = M_c^T\left( 1+\alpha (r_0+r ) \frac{12}{\rho}\right),
+\end{equation}
 
-\end{figure}
+\begin{equation}
+\eta = \eta^T\left( 1+0.03 (r_0'+r') \frac{12}{\rho}\right),   
+\end{equation}
+where $r_0$ and $r_0'$ are the random numbers drawn from the standard normal distribution, which will shift the mean of the $M_c$ and $\eta$ distribution with respect to $M_c^T$ and $\eta^T$. The $r$ and $r'$ are the independent and identically distributed arrays of those randomly generated numbers to spread the distribution. The measurement uncertainty is inversely proportional to signal-to-noise ratio $\rho$, drawn from the distribution $p(\rho) \propto \rho^{-4}$, which holds for isotropically distributed sources in a static universe, subject to the threshold $\rho\geq 8$ for detection. The $\alpha =0.1$ is used for the scaling inspired by analyses of mock data with the LALINFERENCE pipeline \cite{alpha_error_2015} and includes the impact of correlation with parameters describing arbitrary remnant spins.
+
+Finally, after adding the measurement errors in the $M_c$ and $\eta$, we will convert them back to $m_1$ and $m_2$ to perform our analysis. We used the following relation for conversion, and it will provide the masses based on the condition $m_1\geq m_2$.
+
+\begin{equation}
+    m_1 = \frac{1}{2} M_c \eta^{-3/5} (1+\sqrt{\eta_v}),
+\end{equation}
+
+\begin{equation}
+    m_2 = \frac{1}{2} M_c \eta^{-3/5} (1-\sqrt{\eta_v}), 
+\end{equation}
+where $\eta_v = 1-4\eta$, we kept the samples with non-negative values and ignored the negative samples to avoid the square root issues. We also added the absolute error in the eccentricity by using the truncated normal distribution scaling at $0.05$ to keep the eccentricity positive.
 
 
-\subsection{Synthetic parameter inference with eccentricity}
+
+
+
+
+
+
+\subsection{Synthetic population without eccentricity}
 
 To compare the synthetic EBBHs population with the non-eccentric BBHs (NEBBHS), we created four more populations by scaling the existing populations using the Eq. \ref{eq:scaling} defined in \cite{2021_scaling_paper}. The Eq. \ref{eq:scaling} removes the eccentric component from the population, scales the masses, and eventually, we get non-eccentric populations to compare with the existing eccentric population.
 \begin{align}
@@ -363,12 +350,12 @@ M^{ecc} = \frac{M}{(1-\frac{157}{24}\epsilon^2)^{3/5}}
 \begin{table*}[]
     \centering
     \begin{tabular}{c|cccc}
-        \hline
-        Populations & $m^1_{min} [M_\odot] $ & $m^1_{max} [M_\odot]$ & $m^2_{min} [M_\odot]$ & $m^2_{max} [M_\odot]$ \\ \hline
-        First & 16.68 & 49.64 & 10.77 & 46.75 \\ \hline
-        Second & 18.95 & 49.51 & 9.89 & 48.33 \\ \hline
-        Third & 9.13 & 49.55 & 9.1 & 49.11  \\ \hline
-        Forth & 18.2 & 49.79 & 10.3 & 47.08  \\ \hline
+        \hline \hline
+        Populations & $m_{1_{min}} [M_\odot] $ & $m_{1_{max}} [M_\odot]$ & $m_{2_{min}} [M_\odot]$ & $m_{_2{max}} [M_\odot]$ \\ \hline
+        First & 12.09 & 49.6 & 10.17 & 46.27 \\ \hline
+        Second & 15.26 & 49.77 & 10.3 & 47.56 \\ \hline
+        Third & 15.96 & 49.5 & 10.62 & 46.60  \\ \hline
+        Forth & 11.86 & 49.76 & 9.67 & 46.99  \\ \hline
     \end{tabular}
     \caption{Population Properties of NEBBHs}
     \label{tab:popscl_prop}
@@ -377,49 +364,35 @@ M^{ecc} = \frac{M}{(1-\frac{157}{24}\epsilon^2)^{3/5}}
 
 \begin{figure*}
 
-\includegraphics[width=0.45\textwidth]{paper/figures/pop0.05.png}
-\includegraphics[width=0.45\textwidth]{paper/figures/pop0.2.png}
-\caption{\label{fig:pop_0.05_0.2} The left figure shows the primary mass vs secondary mass of the EBBHs and NEBBHs with $\sigma_\epsilon =0.05$. The right figure shows the same plot but for $\sigma_\epsilon=0.2$} 
+\includegraphics[width=0.45\textwidth]{paper/figures/pop2d_0.05.png}
+\includegraphics[width=0.45\textwidth]{paper/figures/pop2d_0.2.png}
+\caption{\label{fig:pop2d_0.05_0.2} The left figure shows the primary mass vs secondary mass of the EBBHs and NEBBHs with $\sigma_\epsilon =0.05$. The right figure shows the same plot but for $\sigma_\epsilon=0.2$} 
 
 \end{figure*}
 
 
 
 
-To get the non-eccentric population, we apply the Eq. \ref{eq:scaling} on the population given in Fig. \ref{fig:pop2d05} and get the new population with scaled masses. We get the new minimum and maximum values for the primary and secondary masses in Fig. \ref{fig:pop2dscal05}. 
+To get the non-eccentric population, we apply the Eq. \ref{eq:scaling} on the population given in the table. \ref{tab:pop_prop}. After applying the scaling equation, we get the new populations with scaled masses, giving us the new minimum and maximum values for the primary and secondary masses given in table \ref{tab:popscl_prop}.
    
 
 
-The significant effect after the scaling is not only the mass shift, but one may notice in Fig. \ref{fig:pop2dscal05} that $14$ sources were missed out of $100$. This reflects that we may miss the various sources by ignoring the effect of eccentricity. The mass scaling effect is visible in Fig. \ref{fig:pop2d05diff}, and we also notice that sources start missing after $e \gtrsim 0.38$.
+The significant effect after scaling is the mass shift, which can be observed in Fig. \ref{fig:pop2d_0.05_0.2}. In this figure, the left-hand side shows the mass shift of the first population generated with smaller $\sigma_\epsilon =0.05$, which leads to a lesser mass shift. However, on the right hand of Fig. \ref{fig:pop2d_0.05_0.2}, one can see the significant mass shift after removing the eccentric component.  This also reflects that we may miss the various sources by ignoring the effect of eccentricity and we notice that sources start missing, which has eccentricity $\epsilon>0.38$.
 
-
-
-
-
-
-
-
-
-
-
-
-
- 
-   
 
                             
 
 \section{Population Inference}
-
+%\renewcommand{\arraystretch}{2}
 \begin{table*}[]
     \centering
     \begin{tabular}{c|ccccc}
-        \hline
+        \hline \hline
        Inference & $log_{10}(\frac{\mathcal{R}}{Gpc^{-3}yr^-1})$ & $\alpha$ & $m_{min} [M_\odot] $ & $m_{max} [M_\odot]$ & $\sigma_\epsilon$ \\ \hline
-      First& $1.88^{+0.18}_{-0.59}$ & $-1.41^{+1.29}_{-0.97}$ & $5.47^{+1.74}_{-1.74}$ & $69.67^{+10.20}_{-10.75}$ & $0.05^{+0.35}_{-0.02}$ \\ \hline
-      Second & $1.89^{+0.15}_{-0.56}$ & $-0.99^{+1.01}_{-0.85}$ & $5.52^{+1.75}_{-1.80}$ & $69.74^{+10.64}_{-10.95}$ & $0.07^{+0.33}_{-0.02}$ \\ \hline
-      Third & $1.90^{+0.14}_{-0.53}$ & $-0.94^{+0.94}_{-0.82}$ & $5.63^{+2.02}_{-1.92}$ & $69.73^{+10.92}_{-11.07}$ & $0.10^{+0.30}_{-0.02}$  \\ \hline
-      Forth & $1.91^{+0.18}_{-0.55}$ & $-1.89^{+1.44}_{-1.00}$ & $5.48^{+1.87}_{-1.90}$ & $69.26^{+11.43}_{-10.96}$ & $0.14^{+0.29}_{-0.03}$  \\ \hline
+      First& $1.42^{+0.58}_{-2.64}$ & $-0.88^{+3.17}_{-1.89}$ & $8.36^{+7.49}_{-3.51}$ & $58.44^{+10.21}_{-24.31}$ & $0.30^{+0.54}_{-0.25}$ \\ \hline
+      Second & $1.36^{+0.63}_{-2.65}$ & $-0.93^{+3.29}_{-1.92}$ & $8.71^{+7.36}_{-3.81}$ & $57.84^{+10.81}_{-25.53}$ & $0.33^{+0.51}_{-0.25}$ \\ \hline
+      Third & $1.39^{+0.58}_{-2.69}$ & $-0.69^{+2.98}_{-1.95}$ & $9.21^{+6.31}_{-3.99}$ & $57.85^{+10.73}_{-27.04}$ & $0.33^{+0.51}_{-0.23}$  \\ \hline
+      Forth & $1.27^{+0.72}_{-2.68}$ & $-0.90^{+3.30}_{-1.98}$ & $8.63^{+7.85}_{-3.72}$ & $57.76^{+11.03}_{-25.82}$ & $0.37^{+0.47}_{-0.23}$  \\ \hline
     \end{tabular}
     \caption{Population Inference for EBBHs}
     \label{tab:inference_EBBHS}
@@ -429,12 +402,12 @@ The significant effect after the scaling is not only the mass shift, but one may
 \begin{table*}[]
     \centering
     \begin{tabular}{c|cccc}
-        \hline
+        \hline \hline
         Inference & $log_{10}(\frac{\mathcal{R}}{Gpc^{-3}yr^-1})$ & $\alpha$ & $m_{min} [M_\odot] $ & $m_{max} [M_\odot]$ \\ \hline
-      First & $1.89^{+0.17}_{-0.43}$ & $-1.68^{+1.08}_{-0.80}$ & $5.49^{+2.38}_{-2.41}$ & $68.83^{+14.66}_{-13.13}$  \\ \hline
-      Second & $1.89^{+0.13}_{-0.43}$ & $-0.90^{+0.72}_{-0.68}$ & $5.40^{+2.29}_{-2.40}$ & $68.61^{+14.69}_{-13.33}$  \\ \hline
-      Third & $1.89^{+0.13}_{-0.44}$ & $-0.57^{+0.65}_{-0.67}$ & $5.72^{+2.48}_{-2.40}$ & $68.74^{+14.30}_{-12.99}$   \\ \hline
-      Forth & $1.89^{+0.14}_{-0.45}$ & $-1.20^{+0.81}_{-0.71}$ & $5.32^{+2.33}_{-2.38}$ & $68.83^{+14.51}_{-12.95}$  \\ \hline
+      First & $1.85^{+0.14}_{-1.23}$ & $-1.37^{+1.43}_{-0.94}$ & $7.54^{+3.68}_{-3.04}$ & $63.29^{+8.00}_{-13.08}$  \\ \hline
+      Second & $1.83^{+0.14}_{-1.38}$ & $-1.12^{+1.47}_{-0.91}$ & $7.69^{+3.88}_{-3.15}$ & $61.91^{+8.59}_{-13.87}$  \\ \hline
+      Third & $1.84^{+0.15}_{-1.55}$ & $-0.38^{+1.03}_{-0.96}$ & $8.07^{+3.44}_{-3.27}$ & $61.70^{+8.49}_{-24.26}$   \\ \hline
+      Forth & $1.86^{+0.16}_{-1.85}$ & $-0.31^{+1.17}_{-1.14}$ & $6.99^{+8.77}_{-2.58}$ & $61.15^{+8.72}_{-16.84}$  \\ \hline
     \end{tabular}
     \caption{Population Inference for NEBBHs}
     \label{tab:inference_NEBBHS}
@@ -443,14 +416,14 @@ we can discuss the corner plots here.
 
 \begin{figure*}
 
-\includegraphics[width=0.95\textwidth]{paper/figures/corfig_0.05.png}
+\includegraphics[width=0.95\textwidth]{paper/figures/cor_0.05.png}
 \caption{\label{fig:pop3d05}\textbf{Corner Plots for EBBHs and BBHS for $\sigma_\epsilon=0.05$}}
 
 \end{figure*}
 Same population.
 \begin{figure*}
 
-\includegraphics[width=0.95\textwidth]{paper/figures/corfig_0.2.png}
+\includegraphics[width=0.95\textwidth]{paper/figures/cor_0.2.png}
 \caption{\label{fig:pop3d05}\textbf{Corner Plots for EBBHs and BBHs for $\sigma_\epsilon=0.2$}}
 
 \end{figure*}
